--- a/contact.html
+++ b/contact.html
@@ -1,250 +1,410 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<link
-			rel="stylesheet"
-			href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
-			integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
-			crossorigin="anonymous"
-		/>
-		<link
-			rel="stylesheet"
-			href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-			integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-			crossorigin="anonymous"
-		/>
 
-		<link rel="stylesheet" href="css/style.css" />
-		<title>Bootstrap Theme</title>
-	</head>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
+		integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous" />
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+		integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous" />
 
-	<body>
-		<!-- NAVABR -->
-		<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-			<div class="container">
-				<a class="navbar-brand" href="index.html">Glozzom</a>
-				<button
-					class="navbar-toggler d-lg-none"
-					data-toggle="collapse"
-					data-target="#navbarCollapse"
-				>
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarCollapse">
-					<ul class="navbar-nav ml-auto">
-						<li class="nav-item">
-							<a class="nav-link" href="index.html">Home</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="about.html">About</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="services.html"
-								>Services</a
-							>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="blog.html">Blog</a>
-						</li>
-						<li class="nav-item active">
-							<a class="nav-link" href="contact.html">Contact</a>
-						</li>
-					</ul>
+	<link rel="stylesheet" href="css/style.css" />
+	<title>Dance Academy - Contact Us</title>
+</head>
+
+<body>
+	<!-- NAVABR -->
+	<nav class="navbar navbar-expand-md navbar-dark bg-black fixed-top py-3" id="og">
+		<div class="container">
+			<a class="navbar-brand ml-2" href="index.html">Dance Academy</a>
+			<button class="navbar-toggler d-lg-none" data-toggle="collapse" data-target="#navbarCollapse"
+				id="hamburger2">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarCollapse">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="index.html">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="about.html">About</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="services.html">Services</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="achievements.html">Achievements</a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="contact.html">Contact</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+
+	<!-- PAGE HEADER -->
+	<header id="contact-page-header">
+		<div class="container">
+			<div class="row" id="contact-heading">
+				<div class="col-md-6 m-auto text-center">
+					<h1 class="display-4">Contact Us</h1>
+					<p>
+						Get in touch with us & also get to know about our
+						staff and support team.
+					</p>
 				</div>
 			</div>
-		</nav>
+		</div>
+	</header>
 
-		<!-- PAGE HEADER -->
-		<header id="page-header">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-6 m-auto text-center">
-						<h1>Contact Us</h1>
-						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing
-							elit. Numquam, neque?
-						</p>
-					</div>
-				</div>
-			</div>
-		</header>
-
-		<!-- CONTACT SECTION -->
-		<section id="contact-section" class="py-3 my-3">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-4 mb-3">
-						<div class="card p-4">
-							<div class="card-body">
-								<h4 class="card-title">Get In Touch</h4>
-								<p class="card-text">
-									Lorem ipsum dolor sit, amet consectetur
-									adipisicing elit. Dolore, dolor.
-								</p>
-								<hr />
-								<h4>Address</h4>
-								<p>550 Main st, Bostopn MA</p>
-								<h4>Email</h4>
-								<p>test@test.com</p>
-								<h4>Phone</h4>
-								<p>(420) 696-6969-</p>
-							</div>
+	<!-- CONTACT SECTION -->
+	<section id="contact-section" class="py-3 my-3">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4 mb-3">
+					<div class="card p-4 bg-light border-secondary">
+						<div class="card-body">
+							<h4 class="card-title">Get In Touch</h4>
+							<p class="card-text">
+								Lorem ipsum dolor sit, amet consectetur
+								adipisicing elit. Dolore, dolor.
+							</p>
+							<hr color="gray" />
+							<h4>Address</h4>
+							<p>550 Main st, Bostopn MA</p>
+							<h4>Email</h4>
+							<p>danceacademy@test.com</p>
+							<h4>Phone</h4>
+							<p>(420) 696-6969-696</p>
 						</div>
 					</div>
-					<div class="col-md-8">
-						<div class="card p-4">
-							<div class="card-body">
-								<h3 class="card-title text-center">
-									Please fill out this form to contact us
-								</h3>
-								<hr />
-								<div class="row">
+				</div>
+				<div class="col-md-8">
+					<div class="card p-4 bg-light border-secondary">
+						<div class="card-body">
+							<h3 class="card-title text-center">
+								Please fill out this form to register
+							</h3>
+							<hr color="gray" />
+							<form class="needs-validation" novalidate>
+								<div class="form-row">
 									<div class="col-md-6">
 										<div class="form-group">
-											<input
-												type="text"
-												class="form-control"
-												placeholder="First Name"
-											/>
+											<input type="text" class="form-control border-secondary"
+												id="validationCustom01" placeholder="First Name" required>
+											<div class="valid-feedback">
+												Valid Input
+											</div>
+											<div class="invalid-feedback">
+												Invalid Input
+											</div>
 										</div>
 									</div>
 									<div class="col-md-6">
 										<div class="form-group">
-											<input
-												type="text"
-												class="form-control"
-												placeholder="Last Name"
-											/>
+											<input type="text" class="form-control border-secondary"
+												id="validationCustom02" placeholder="Last Name" required>
+											<div class="valid-feedback">
+												Valid Input
+											</div>
+											<div class="invalid-feedback">
+												Invalid Input
+											</div>
 										</div>
 									</div>
 									<div class="col-md-6">
 										<div class="form-group">
-											<input
-												type="email"
-												class="form-control"
-												placeholder="Email"
-											/>
+											<input type="email" class="form-control border-secondary"
+												id="validationCustom03" placeholder="Email" required>
+											<div class="valid-feedback">
+												Valid Email
+											</div>
+											<div class="invalid-feedback">
+												Invalid Email
+											</div>
 										</div>
 									</div>
 									<div class="col-md-6">
 										<div class="form-group">
-											<input
-												type="number"
-												class="form-control"
-												placeholder="Contact Number"
-											/>
+											<input type="number" class="form-control border-secondary"
+												id="validationCustom04" placeholder="Contact Number" required>
+											<div class="valid-feedback">
+												Valid Contact Number
+											</div>
+											<div class="invalid-feedback">
+												Invalid Contact Number
+											</div>
 										</div>
 									</div>
 								</div>
-								<div class="row">
+								<div class="form-row">
 									<div class="col-md-12">
 										<div class="form-group">
-											<textarea
-												class="form-control"
-												placeholder="Message"
-											></textarea>
+											<textarea class="form-control border-secondary"
+												placeholder="Message(optional)"></textarea>
 										</div>
 									</div>
 									<div class="col-md-12">
 										<div class="form-group">
-											<input
-												type="submit"
-												value="Submit"
-												class="
-													btn
-													btn-outline-danger
-													btn-block
-												"
-											/>
+											<input type="submit" value="Submit" class="
+														btn
+														btn-danger
+														btn-block
+													" />
 										</div>
 									</div>
 								</div>
-							</div>
+							</form>
 						</div>
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
+	</section>
 
-		<!-- STAFF SECTION -->
-		<section id="staff" class="py-5 text-center bg-dark text-white">
-			<div class="container">
-				<h1>Our Staff</h1>
-				<hr />
-				<div class="row">
-					<div class="col-md-3 col-sm-6 mb-5">
-						<img
-							src="img/person1.jpg"
-							alt=""
-							class="img-fluid rounded-circle mb-2"
-						/>
-						<h4>Jane Doe</h4>
-						<small>Marketing Manager</small>
+	<!-- STAFF SECTION -->
+	<section id="staff" class="py-5 text-center bg-dark text-white mb-5">
+		<div class="container">
+			<h4 class="display-4">Our Staff</h4>
+			<p class="lead">
+				Get in touch with our staff and support team from various section of our academy.
+			</p>
+			<hr color="grey" class="my-5">
+			</hr>
+			<div class="row">
+				<div class="col-lg-3 col-md-6 col-sm-6 mb-5">
+					<div class="box rounded-circle m-0 p-0">
+						<img src="img/staff/person1.jpg" alt="" class="img-fluid rounded-circle m-0 p-0" />
+
+						<div class="d-flex justify-content-center align-items-center cover">
+							<div class="p-3">
+								<a href="http://facebook.com">
+									<i class="fab fa-facebook fa-2x social"></i>
+								</a>
+							</div>
+							<div class="p-3">
+								<a href="http://twitter.com">
+									<i class="fab fa-twitter fa-2x social"></i>
+								</a>
+							</div>
+							<div class="p-3">
+								<a href="http://instagram.com">
+									<i class="fab fa-instagram fa-2x social"></i>
+								</a>
+							</div>
+						</div>
 					</div>
-					<div class="col-md-3 col-sm-6 mb-5">
-						<img
-							src="img/person2.jpg"
-							alt=""
-							class="img-fluid rounded-circle mb-2"
-						/>
-						<h4>Sarah Willams</h4>
-						<small>Business Manager</small>
+					<h2 class="mt-2">Jane Doe</h2>
+					<small class="lead">Marketing</small>
+				</div>
+				<div class="col-lg-3 col-md-6 col-sm-6 mb-5">
+					<div class="box rounded-circle m-0 p-0">
+						<img src="img/staff/person2.jpg" alt="" class="img-fluid rounded-circle m-0 p-0" />
+
+						<div class="d-flex justify-content-center align-items-center cover">
+							<div class="p-3">
+								<a href="http://facebook.com">
+									<i class="fab fa-facebook fa-2x social"></i>
+								</a>
+							</div>
+							<div class="p-3">
+								<a href="http://twitter.com">
+									<i class="fab fa-twitter fa-2x social"></i>
+								</a>
+							</div>
+							<div class="p-3">
+								<a href="http://instagram.com">
+									<i class="fab fa-instagram fa-2x social"></i>
+								</a>
+							</div>
+						</div>
 					</div>
-					<div class="col-md-3 col-sm-6 mb-5">
-						<img
-							src="img/person3.jpg"
-							alt=""
-							class="img-fluid rounded-circle mb-2"
-						/>
-						<h4>John Fury</h4>
-						<small>Chief Executive Officer</small>
+					<h2 class="mt-2">John Fury</h2>
+					<small class="lead">Event Management</small>
+				</div>
+				<div class="col-lg-3 col-md-6 col-sm-6 mb-5">
+					<div class="box rounded-circle m-0 p-0">
+						<img src="img/staff/person3.jpg" alt="" class="img-fluid rounded-circle m-0 p-0" />
+
+						<div class="d-flex justify-content-center align-items-center cover">
+							<div class="p-3">
+								<a href="http://facebook.com">
+									<i class="fab fa-facebook fa-2x social"></i>
+								</a>
+							</div>
+							<div class="p-3">
+								<a href="http://twitter.com">
+									<i class="fab fa-twitter fa-2x social"></i>
+								</a>
+							</div>
+							<div class="p-3">
+								<a href="http://instagram.com">
+									<i class="fab fa-instagram fa-2x social"></i>
+								</a>
+							</div>
+						</div>
 					</div>
-					<div class="col-md-3 col-sm-6 mb-5">
-						<img
-							src="img/person4.jpg"
-							alt=""
-							class="img-fluid rounded-circle mb-2"
-						/>
-						<h4>Steve Smith</h4>
-						<small>Web Developer</small>
+					<h2 class="mt-2">Sarah Willams</h2>
+					<small class="lead">Business Management</small>
+				</div>
+				<div class="col-lg-3 col-md-6 col-sm-6 mb-5">
+					<div class="box rounded-circle m-0 p-0">
+						<img src="img/staff/person4.jpg" alt="" class="img-fluid rounded-circle m-0 p-0" />
+
+						<div class="d-flex justify-content-center align-items-center cover">
+							<div class="p-3">
+								<a href="http://facebook.com">
+									<i class="fab fa-facebook fa-2x social"></i>
+								</a>
+							</div>
+							<div class="p-3">
+								<a href="http://twitter.com">
+									<i class="fab fa-twitter fa-2x social"></i>
+								</a>
+							</div>
+							<div class="p-3">
+								<a href="http://instagram.com">
+									<i class="fab fa-instagram fa-2x social"></i>
+								</a>
+							</div>
+						</div>
 					</div>
+					<h2 class="mt-2">Steve Pots</h2>
+					<small class="lead">Technical Support</small>
 				</div>
 			</div>
-		</section>
+		</div>
+	</section>
 
-		<!-- FOOTER -->
-		<footer id="main-footer" class="text-white text-center p-4">
-			<div class="container">
-				<div class="row">
-					<div class="col">
-						<p>Copyright &copy; <span id="year"></span> Glozzom</p>
-					</div>
+	<!-- Footer -->
+	<div class="footer-map">
+		<div id="map-container-google-8" class="z-depth-1-half map-container" style="height: 360px">
+			<iframe
+				src="https://maps.google.com/maps?&amp;q=M-1%20Avani%20Society+(Dance%20Academy)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
+				frameborder="0" style="border:0" allowfullscreen></iframe>
+		</div>
+	</div>
+
+	<div class="footer-top">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4 col-lg-4 footer-about">
+					<h2 class="text-white">Dance Academy</h2>
+					<p class="mt-2 text-md-left text-sm-center mb-0">
+						We are a young company always looking for new
+						and creative ideas to help you.
+					</p>
+					<p class="mt-2 text-md-left text-sm-center d-sm-block d-md-none d-lg-block">
+						Lorem ipsum dolor sit hello amet consectetur adipisicing elit.
+					</p>
+				</div>
+				<div class="
+								col-md-4 col-lg-4
+								offset-lg-1
+								footer-contact
+								wow
+								fadeInDown
+							">
+					<h3>Contact</h3>
+					<p>
+						<i class="fas fa-map-marker-alt"></i> 550 Main
+						st, Bostopn MA
+					</p>
+					<p>
+						<i class="fas fa-phone"></i> Phone: 999-9999-999
+					</p>
+					<p>
+						<i class="fas fa-envelope"></i> Email:
+						<a href="mailto:danceacademy@test.com">dance@test.com</a>
+					</p>
+				</div>
+				<div class="col-md-4 col-lg-3 footer-social wow fadeInUp">
+					<h3>Follow us on</h3>
+					<p>
+						<a href="https://www.facebook.com/" target="blank"><i class="fab fa-facebook"></i></a>
+						<a href="https://twitter.com/" target="blank"><i class="fab fa-twitter"></i></a>
+						<a href="https://plus.google.com/" target="blank"><i class="fab fa-google-plus-g"></i></a>
+						<a href="https://www.instagram.com/" target="blank"><i class="fab fa-instagram"></i></a>
+					</p>
 				</div>
 			</div>
-		</footer>
+		</div>
+	</div>
 
-		<script
-			src="http://code.jquery.com/jquery-3.3.1.min.js"
-			integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-			crossorigin="anonymous"
-		></script>
-		<script
-			src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-			integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-			crossorigin="anonymous"
-		></script>
-		<script
-			src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
-			integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-			crossorigin="anonymous"
-		></script>
+	<div class="footer-bottom">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-5 footer-copyright">
+					<p>
+						Copyright &copy; <span id="year"></span>
+						<a href="index.html">Dance Academy</a>
+					</p>
+				</div>
+				<div class="col-md-7 footer-menu">
+					<nav class="navbar navbar-dark navbar-expand-md">
+						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+							aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+							<span class="navbar-toggler-icon"></span>
+						</button>
+						<div class="collapse navbar-collapse" id="navbarNav">
+							<ul class="navbar-nav ml-auto">
+								<li class="nav-item">
+									<a class="nav-link scroll-link" href="index.html">Home</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link scroll-link" href="about.html">About</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link scroll-link" href="services.html">Services</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link scroll-link" href="achievements.html">Achievements</a>
+								</li>
+								<li class="nav-item active">
+									<a class="nav-link scroll-link" href="contact.html">Contact</a>
+								</li>
+							</ul>
+						</div>
+					</nav>
+				</div>
+			</div>
+		</div>
+	</div>
+	</footer>
 
-		<script>
-			// Get the current year for the copyright
-			$('#year').text(new Date().getFullYear());
-		</script>
-	</body>
+	<script src="http://code.jquery.com/jquery-3.3.1.min.js"
+		integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+		integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+		crossorigin="anonymous"></script>
+	<script src="/js/jquery.js"></script>
+	<!-- script to validate form inputs -->
+	<script>
+		//  Example starter JavaScript for disabling form submissions if there are invalid fields
+		(function () {
+			'use strict';
+			window.addEventListener('load', function () {
+				// Fetch all the forms we want to apply custom Bootstrap validation styles to
+				var forms = document.getElementsByClassName('needs-validation');
+				// Loop over them and prevent submission
+				var validation = Array.prototype.filter.call(forms, function (form) {
+					form.addEventListener('submit', function (event) {
+						if (form.checkValidity() === false) {
+							event.preventDefault();
+							event.stopPropagation();
+						}
+						form.classList.add('was-validated');
+					}, false);
+				});
+			}, false);
+		})();
+	</script>
+</body>
+
 </html>
