--- a/achievements.html
+++ b/achievements.html
@@ -11,7 +11,6 @@
 		integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css" />
-
 	<link rel="stylesheet" href="css/style.css" />
 	<title>Dance Academy - Achievements</title>
 </head>
@@ -73,7 +72,7 @@
 				<div class="col">
 					<div class="card-columns">
 						<div class="card border-secondary bg-light">
-							<img class="card-img-top img-fluid" src="/img/achievements/achievement1.jpg" alt="" />
+							<img class="card-img-top img-fluid" src="./img/achievements/achievement1.jpg" alt="" />
 							<div class="card-body bghover">
 								<h4 class="card-title">Asian Ballet Contest</h4>
 								<h6>April 2011</h6>
@@ -94,7 +93,7 @@
 						</div>
 
 						<div class="card border-secondary bg-light">
-							<img class="card-img-top img-fluid" src="/img/achievements/achievement4.jpg" alt="" />
+							<img class="card-img-top img-fluid" src="./img/achievements/achievement4.jpg" alt="" />
 							<div class="card-body bghover">
 								<h4 class="card-title">VIBEXXIV Break Dance</h4>
 								<h6>December 2017</h6>
@@ -115,7 +114,7 @@
 						</div>
 
 						<div class="card border-secondary bg-light">
-							<img class="card-img-top img-fluid" src="/img/achievements/achievement2.jpg" alt="" />
+							<img class="card-img-top img-fluid" src="./img/achievements/achievement2.jpg" alt="" />
 							<div class="card-body bghover">
 								<h4 class="card-title">UAE Aerial Champions</h4>
 								<h6>October 2013</h6>
@@ -136,7 +135,7 @@
 						</div>
 
 						<div class="card border-secondary bg-light">
-							<img class="card-img-top img-fluid" src="/img/achievements/achievement3.jpg" alt="" />
+							<img class="card-img-top img-fluid" src="./img/achievements/achievement3.jpg" alt="" />
 							<div class="card-body bghover">
 								<h4 class="card-title">Salsa Championship</h4>
 								<h6>July 2019</h6>
@@ -157,7 +156,7 @@
 						</div>
 
 						<div class="card border-secondary bg-light">
-							<img class="card-img-top img-fluid" src="/img/achievements/achievement5.jpg" alt="" />
+							<img class="card-img-top img-fluid" src="./img/achievements/achievement5.jpg" alt="" />
 							<div class="card-body bghover">
 								<h4 class="card-title">Hip Hop International</h4>
 								<h6>March 2014</h6>
@@ -178,7 +177,7 @@
 						</div>
 
 						<div class="card border-secondary bg-light">
-							<img class="card-img-top img-fluid" src="/img/achievements/achievement6.jpg" alt="" />
+							<img class="card-img-top img-fluid" src="./img/achievements/achievement6.jpg" alt="" />
 							<div class="card-body bghover">
 								<h4 class="card-title">Nrithyothsava 2021</h4>
 								<h6>August 2021</h6>
@@ -366,7 +365,7 @@
 		integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
 		crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.js"></script>
-	<script src="/js/jquery.js">
+	<script src="./js/jquery.js">
 	</script>
 </body>
 
