--- a/contact.html
+++ b/contact.html
@@ -177,7 +177,7 @@
 			<div class="row">
 				<div class="col-lg-3 col-md-6 col-sm-6 mb-5">
 					<div class="box rounded-circle m-0 p-0">
-						<img src="img/staff/person1.jpg" alt="" class="img-fluid rounded-circle m-0 p-0" />
+						<img src="./img/staff/person1.jpg" alt="" class="img-fluid rounded-circle m-0 p-0" />
 
 						<div class="d-flex justify-content-center align-items-center cover">
 							<div class="p-3">
@@ -202,7 +202,7 @@
 				</div>
 				<div class="col-lg-3 col-md-6 col-sm-6 mb-5">
 					<div class="box rounded-circle m-0 p-0">
-						<img src="img/staff/person2.jpg" alt="" class="img-fluid rounded-circle m-0 p-0" />
+						<img src="./img/staff/person2.jpg" alt="" class="img-fluid rounded-circle m-0 p-0" />
 
 						<div class="d-flex justify-content-center align-items-center cover">
 							<div class="p-3">
@@ -227,7 +227,7 @@
 				</div>
 				<div class="col-lg-3 col-md-6 col-sm-6 mb-5">
 					<div class="box rounded-circle m-0 p-0">
-						<img src="img/staff/person3.jpg" alt="" class="img-fluid rounded-circle m-0 p-0" />
+						<img src="./img/staff/person3.jpg" alt="" class="img-fluid rounded-circle m-0 p-0" />
 
 						<div class="d-flex justify-content-center align-items-center cover">
 							<div class="p-3">
@@ -252,7 +252,7 @@
 				</div>
 				<div class="col-lg-3 col-md-6 col-sm-6 mb-5">
 					<div class="box rounded-circle m-0 p-0">
-						<img src="img/staff/person4.jpg" alt="" class="img-fluid rounded-circle m-0 p-0" />
+						<img src="./img/staff/person4.jpg" alt="" class="img-fluid rounded-circle m-0 p-0" />
 
 						<div class="d-flex justify-content-center align-items-center cover">
 							<div class="p-3">
@@ -383,7 +383,7 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
 		integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
 		crossorigin="anonymous"></script>
-	<script src="/js/jquery.js"></script>
+	<script src="./js/jquery.js"></script>
 	<!-- script to validate form inputs -->
 	<script>
 		//  Example starter JavaScript for disabling form submissions if there are invalid fields
