--- a/services.html
+++ b/services.html
@@ -69,33 +69,33 @@
 			<div class="row no-gutters">
 				<div class="col-md-4">
 					<div>
-						<img class="img-fluid" src="/img/glance/glance1.jpg" alt="Card image cap">
+						<img class="img-fluid" src="./img/glance/glance1.jpg" alt="Card image cap">
 					</div>
 
 					<div>
-						<img class="img-fluid" src="/img/glance/glance2.jpg" alt="Card image cap">
-					</div>
-
-				</div>
-
-				<div class="col-md-4">
-					<div>
-						<img class="img-fluid" src="/img/glance/glance3.jpg" alt="Card image cap">
-					</div>
-
-					<div>
-						<img class="img-fluid" src="/img/glance/glance4.jpg" alt="Card image cap">
+						<img class="img-fluid" src="./img/glance/glance2.jpg" alt="Card image cap">
 					</div>
 
 				</div>
 
 				<div class="col-md-4">
 					<div>
-						<img class="img-fluid" src="/img/glance/glance5.jpg" alt="Card image cap">
+						<img class="img-fluid" src="./img/glance/glance3.jpg" alt="Card image cap">
 					</div>
 
 					<div>
-						<img class="img-fluid" src="/img/glance/glance6.jpg" alt="Card image cap">
+						<img class="img-fluid" src="./img/glance/glance4.jpg" alt="Card image cap">
+					</div>
+
+				</div>
+
+				<div class="col-md-4">
+					<div>
+						<img class="img-fluid" src="./img/glance/glance5.jpg" alt="Card image cap">
+					</div>
+
+					<div>
+						<img class="img-fluid" src="./img/glance/glance6.jpg" alt="Card image cap">
 					</div>
 				</div>
 			</div>
@@ -122,7 +122,7 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="card mb-pic">
 						<div class="card-body">
-							<img class="img-fluid rounded-circle w-50 mb-3" src="img/teachers/teacher1.jpg" />
+							<img class="img-fluid rounded-circle w-50 mb-3" src="./img/teachers/teacher1.jpg" />
 							<h3>Susan Evans</h3>
 							<h5>Jazz</h5>
 							<p class="card-text">
@@ -154,7 +154,7 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="card mb-pic">
 						<div class="card-body">
-							<img class="img-fluid rounded-circle w-50 mb-3" src="img/teachers/teacher2.jpg" />
+							<img class="img-fluid rounded-circle w-50 mb-3" src="./img/teachers/teacher2.jpg" />
 							<h3>Kavya Roy</h3>
 							<h5>Classical</h5>
 							<p class="card-text">
@@ -186,7 +186,7 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="card mb-pic">
 						<div class="card-body">
-							<img class="img-fluid rounded-circle w-50 mb-3" src="img/teachers/teacher3.jpg" />
+							<img class="img-fluid rounded-circle w-50 mb-3" src="./img/teachers/teacher3.jpg" />
 							<h3>John Doe</h3>
 							<h5>Salsa</h5>
 							<p class="card-text">
@@ -218,7 +218,7 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="card">
 						<div class="card-body">
-							<img class="img-fluid rounded-circle w-50 mb-3" src="img/teachers/teacher4.jpg" />
+							<img class="img-fluid rounded-circle w-50 mb-3" src="./img/teachers/teacher4.jpg" />
 							<h3>Kevin Pots</h3>
 							<h5>Hip-Hop</h5>
 							<p class="card-text">
@@ -685,7 +685,7 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
 		integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
 		crossorigin="anonymous"></script>
-	<script src="/js/jquery.js"></script>
+	<script src="./js/jquery.js"></script>
 	<script>
 		// Caret up-down for FAQs
 		$('.faq-q-click').click(function () {
