--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
 				<div class="col-md-6 col-sm-12 pt-1" id="about-row">
 					<h2 class="display-4 text-center text-md-left">What We Do</h2>
 					<div>
-						<img src="/img/group.jpg" alt="" class="
+						<img src="../img/group.jpg" alt="" class="
 									img-fluid
 									rounded-circle
 									d-block d-md-none d-lg-none
@@ -103,7 +103,7 @@
 					</p>
 				</div>
 				<div class="col-md-6">
-					<img src="/img/group.jpg" alt="" class="
+					<img src="./img/group.jpg" alt="" class="
 								img-fluid
 								rounded-circle
 								d-none d-md-block
@@ -114,9 +114,9 @@
 		</div>
 	</section>
 
-
+	<!-- GOALS -->
 	<section id="vidGallery">
-		<div class="jumbotron mt-5 pb-4">
+		<div class="jumbotron bg-dark text-light mt-5 pb-4">
 			<div class="container mb-0">
 				<h2 class="display-4 text-center">Our Goals</h2>
 				<p class="text-justify text-center lead mb-5">
@@ -124,7 +124,7 @@
 				</p>
 				<div class="row justify-content-between">
 					<div class="col-md-4 text-center mb-5">
-						<img src="/img/goals/vision.png" alt="" height="110px">
+						<img src="./img/goals/vision.png" alt="" height="110px">
 						<h3 class="mt-3">Vision</h3>
 						<p>
 							Lorem ipsum dolor sit amet consectetur adipisicing
@@ -133,7 +133,7 @@
 						</p>
 					</div>
 					<div class="col-md-4 text-center mb-5">
-						<img src="/img/goals/mission.png" alt="" height="110px">
+						<img src="./img/goals/mission.png" alt="" height="110px">
 						<h3 class="mt-3">Mission</h3>
 						<p>
 							Lorem ipsum dolor sit amet consectetur adipisicing
@@ -142,7 +142,7 @@
 						</p>
 					</div>
 					<div class="col-md-4 text-center mb-5">
-						<img src="/img/goals/values.png" alt="" height="110px">
+						<img src="./img/goals/values.png" alt="" height="110px">
 						<h3 class="mt-3">Values</h3>
 						<p>
 							Lorem ipsum dolor sit amet consectetur adipisicing
@@ -156,7 +156,7 @@
 	</section>
 
 
-	<!-- ICON BOXES -->
+	<!-- EVENT BOXES -->
 	<section id="icon-boxes" class="px-4 my-5">
 		<div class="container">
 			<h2 class="display-4 text-center pt-3">Our Events</h2>
@@ -478,7 +478,7 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
 		integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
 		crossorigin="anonymous"></script>
-	<script src="/js/jquery.js"></script>
+	<script src="./js/jquery.js"></script>
 </body>
 
 </html>
