--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
 		integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" />
-	<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/style.css" />
+	<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap" rel="stylesheet" />
+	<link rel="stylesheet" href='css/style.css' />
 	<title>Dance Academy</title>
 </head>
 
@@ -205,7 +205,7 @@
 				<h3 class="pt-2 pb-5 text-center display-4">Why Should You Dance</h3>
 				<div class="row justify-content-around">
 					<div class="col-md-4 mb-4 text-center">
-						<img src="/img/icons/icon1.png" alt="" height="120px">
+						<img src="./img/icons/icon1.png" alt="" height="120px">
 						<h3>Improved Posture</h3>
 						<p>
 							Lorem ipsum dolor sit amet consectetur adipisicing
@@ -213,7 +213,7 @@
 						</p>
 					</div>
 					<div class="col-md-4 mb-4 text-center">
-						<img src="/img/icons/icon2.png" alt="" height="120px">
+						<img src="./img/icons/icon2.png" alt="" height="120px">
 						<h3>Increased Flexibility</h3>
 						<p>
 							Lorem ipsum dolor sit amet consectetur adipisicing
@@ -221,7 +221,7 @@
 						</p>
 					</div>
 					<div class="col-md-4 mb-4 text-center">
-						<img src="/img/icons/icon3.png" alt="" height="120px">
+						<img src="./img/icons/icon3.png" alt="" height="120px">
 						<h3>Grace & Rhythm</h3>
 						<p>
 							Lorem ipsum dolor sit amet consectetur adipisicing
@@ -242,53 +242,53 @@
 			<p class="text-center lead">Check Out The Dance Forms We Teach Here</p>
 			<div class="row">
 				<div class="col-md-4 col-sm-6 mb-3 content_img">
-					<a href="/img/danceforms/dance1.jpg" data-toggle="lightbox" data-gallery="img-gallery"
+					<a href="./img/danceforms/dance1.jpg" data-toggle="lightbox" data-gallery="img-gallery"
 						data-height="560" data-witdh="560">
-						<img src="/img/danceforms/dance1.jpg" alt="" class="img-fluid" />
+						<img src="./img/danceforms/dance1.jpg" alt="" class="img-fluid" />
 					</a>
 					<div>Classical</div>
 				</div>
 
 				<div class="col-md-4 col-sm-6 mb-3 content_img" id="danceform">
-					<a href="/img/danceforms/dance2.jpg" data-toggle="lightbox" data-gallery="img-gallery"
+					<a href="./img/danceforms/dance2.jpg" data-toggle="lightbox" data-gallery="img-gallery"
 						data-height="560" data-witdh="560">
-						<img src="/img/danceforms/dance2.jpg" alt="" class="img-fluid" />
+						<img src="./img/danceforms/dance2.jpg" alt="" class="img-fluid" />
 					</a>
 					<div>Contemporary</div>
 				</div>
 
 
 				<div class="col-md-4 col-sm-6 mb-3 content_img">
-					<a href="/img/danceforms/dance3.jpg" data-toggle="lightbox" data-gallery="img-gallery"
+					<a href="./img/danceforms/dance3.jpg" data-toggle="lightbox" data-gallery="img-gallery"
 						data-height="560" data-witdh="560">
-						<img src="/img/danceforms/dance3.jpg" alt="" class="img-fluid" />
+						<img src="./img/danceforms/dance3.jpg" alt="" class="img-fluid" />
 					</a>
 					<div>Aerial</div>
 				</div>
 
 
 				<div class="col-md-4 col-sm-6 mb-3 content_img">
-					<a href="/img/danceforms/dance4.jpg" data-toggle="lightbox" data-gallery="img-gallery"
+					<a href="./img/danceforms/dance4.jpg" data-toggle="lightbox" data-gallery="img-gallery"
 						data-height="560" data-witdh="560">
-						<img src="/img/danceforms/dance4.jpg" alt="" class="img-fluid" />
+						<img src="./img/danceforms/dance4.jpg" alt="" class="img-fluid" />
 					</a>
 					<div>Ballet</div>
 				</div>
 
 
 				<div class="col-md-4 col-sm-6 mb-3 content_img">
-					<a href="/img/danceforms/dance5.jpg" data-toggle="lightbox" data-gallery="img-gallery"
+					<a href="./img/danceforms/dance5.jpg" data-toggle="lightbox" data-gallery="img-gallery"
 						data-height="560" data-witdh="560">
-						<img src="/img/danceforms/dance5.jpg" alt="" class="img-fluid" />
+						<img src="./img/danceforms/dance5.jpg" alt="" class="img-fluid" />
 					</a>
 					<div>Salsa</div>
 				</div>
 
 
 				<div class="col-md-4 col-sm-6 mb-3 content_img">
-					<a href="/img/danceforms/dance6.jpg" data-toggle="lightbox" data-gallery="img-gallery"
+					<a href="./img/danceforms/dance6.jpg" data-toggle="lightbox" data-gallery="img-gallery"
 						data-height="560" data-witdh="560">
-						<img src="/img/danceforms/dance6.jpg" alt="" class="img-fluid" />
+						<img src="./img/danceforms/dance6.jpg" alt="" class="img-fluid" />
 					</a>
 					<div>Hip hop</div>
 				</div>
@@ -431,7 +431,7 @@
 		integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
 		crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
-	<script src="/js/jquery.js"></script>
+	<script src="./js/jquery.js"></script>
 
 </body>
 
